# multibase

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: main.cpp
cmake/: multibaseConfig.cmake
include/: CMakeLists.txt
include/multibase/: base_none.hpp  basic_algorithm.hpp  byte_ostream_iterator.hpp  codec.hpp  encoding.hpp  encoding_case.hpp  encoding_metadata.hpp  encoding_traits.hpp  log.hpp  portability.hpp
multibase/: Base.cpp  Base.h  algorithm.cpp  algorithm.h  base.cpp  basic_algorithm.cpp  basic_algorithm.h  basic_algorithm.hpp  basic_codec.cpp  basic_codec.h  codec.cpp  codec.h  codec.hpp  codec_impl.cpp  codec_impl.h  encoding.cpp  encoding.h  encoding.hpp  encoding_case.cpp  encoding_case.hpp  encoding_metadata.cpp  encoding_metadata.hpp  encoding_traits.hpp  identity_algorithm.cpp  identity_algorithm.h  identity_codec.cpp  identity_codec.h  log.h  log.hpp  main.cpp  multibase.cpp  multibase.h  portability.hpp
multibase/detail/: codec_impl.cpp  codec_impl.h
src/: CMakeLists.txt
src/multibase/: basic_algorithm.cpp  codec.cpp  encoding.cpp  encoding_case.cpp  encoding_metadata.cpp  encoding_traits.cpp  log.cpp  main.cpp  portability.cpp
test/: CMakeLists.txt  MultibaseTest.cpp  multibase_test.cpp
test/src/: CMakeLists.txt
test/src/test/: multibase_benchmark.cpp  multibase_test.cpp
